--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "John Glass"
   avatar           : "profile.png"
-  bio              : "Materials Scient"
+  bio              : "PhD Candidate"
   location         : "Beijing"
   employer         :
   pubmed           : 
