--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "John Glass"
 title_separator          : "-"
 name                     : &name "John Glass"
 description              : &description "PhD candidate in Tsinghua University"
-url                      : https://flagguard.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://flagguard.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "flagguard/flagguard.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
